# remarkable-auto-ocr

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .pytest.ini  LICENSE  README.md  deploy.dockerfile  dev.docker-compose.yml  dev.dockerfile  docker-compose.yaml  docker-compose.yml  main.py  override.txt  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
scripts/: entrypoint.sh  ssh_add.sh
src/: config.py  db.py  doc_parsing.py  file_processing_config.py  file_sync.py  main.py  models.py  remarkable  remarkable.py
src/rao/: config.py  db.py  doc_parsing.py  file_processing_config.py  file_sync.py  main.py  models.py  remarkable.py
tests/: conftest.py  test_config.py  test_db.py  test_doc_parsing.py  test_file_sync.py  test_remarkable.py
