[project]
name = "remarkable-auto-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "google-genai>=0.6.0",
    "google-generativeai>=0.8.4",
    "loguru>=0.7.3",
    "mdformat>=0.7.21",
    "pandas>=2.2.3",
    "paramiko>=3.5.0",
    "pypdf>=5.2.0",
    "rmc",
    "rmrl>=0.2.1",
    "setuptools>=75.8.0",
    "sqlalchemy>=2.0.37",
]


[dependency-groups]
dev = [
    "ruff>=0.9.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/rao"]


[project.scripts]
rm-auto-ocr = "rao.main:main"


[tool.uv.sources]
rmc = { git = "https://github.com/SNeugber/rmc.git", rev = "9e89abc5495cdfb505030069bf2588cf975e761c" }
