[project]
name = "remarkable-auto-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "google-genai>=0.6.0",
    "google-generativeai>=0.8.4",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "paramiko>=3.5.0",
    "pypdf>=5.2.0",
    "remarks",
    "rmrl>=0.2.1",
    "setuptools>=75.8.0",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.37",
]


[dependency-groups]
dev = [
    "mdformat-black>=0.1.1",
    "mdformat-gfm>=0.4.1",
    "mdformat-tables>=1.0.0",
    "mdformat-toc>=0.3.0",
    "mdformat>=0.7.22",
    "ruff>=0.9.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/rao"]

[tool.uv.sources]
remarks = { git = "https://github.com/SNeugber/remarks", rev = "add_template_support" }


[project.scripts]
rm-auto-ocr = "rao.main:main"
