[project]
name = "remarkable-auto-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "click>=8.1.8",
    "google-genai>=0.6.0",
    "google-generativeai>=0.8.4",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "paramiko>=3.5.0",
    "pypdf>=5.2.0",
    "ratelimit>=2.2.1",
    "remarks",
    "rmrl>=0.2.1",
    "setuptools>=75.8.0",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.37",
    "tqdm>=4.67.1",
]


[dependency-groups]
dev = [
    "mdformat-black>=0.1.1",
    "mdformat-gfm>=0.4.1",
    "mdformat-tables>=1.0.0",
    "mdformat-toc>=0.3.0",
    "mdformat>=0.7.22",
    "ruff>=0.9.1",
    "pytest>=8.3.4",
    "toml>=0.10.2",
    "mypy>=1.15.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/rao"]

[tool.uv.sources]
remarks = { git = "https://github.com/SNeugber/remarks", rev = "361c059fff7aab3f474cbaa23334aa495254eda0" }

[project.scripts]
rm-auto-ocr = "rao.main:main"
